# verrou

./: .gitignore  .travis.yml  CHANGELOG.md  DD.py  FAQ.html  Makefile.am  QuickStart.html  README.md  TP.tgz  bbv-manual.html  cg-manual.html  cl-format.html  cl-manual.html  configure.ac  design-impl.html  dh-manual.html  dist.authors.html  dist.html  dist.news.html  dist.news.old.html  dist.readme-android.html  dist.readme-android_emulator.html  dist.readme-developers.html  dist.readme-freebsd.html  dist.readme-mips.html  dist.readme-missing.html  dist.readme-packagers.html  dist.readme-riscv64.html  dist.readme-s390.html  dist.readme-solaris.html  dist.readme.html  drd-manual.html  env.sh.in  extendStdoutPrecision.cxx  faq.html  generateBackendInterOperator.py  generateInstrumentOp_impl.py  generateOpImpl.py  hg-manual.html  index.html  (+80 more)
.github/workflows/: github-actions-compil-only.yml  github-actions-travis.yml
Interlibmath/: Makefile  README.md  interlibmath.cxx  runExemple.sh  stacktrace.cxx  test.py  testCos.cxx  testCos.py
Interlibmath/testlibM/: Makefile  genTab.py  testAster.cxx  testRegRef
backend_checkcancellation/: interflop_checkcancellation.cxx  interflop_checkcancellation.h  test_main.cxx  vr_fpRepr.hxx
backend_checkdenorm/: interflop_checkdenorm.cxx  interflop_checkdenorm.h  test_main.cxx
backend_mcaquad/: interflop_mcaquad.c  interflop_mcaquad.cxx  interflop_mcaquad.h  mcalib.c  test_main.cxx
backend_mcaquad/common/: quadmath-imp.h
backend_verrou/: Makefile  interflop_backend_interface.h  interflop_verrou.cxx  interflop_verrou.h  test_main.cxx  vr_fma.hxx  vr_fpOps.cxx  vr_fpOps.h  vr_fpRepr.hxx  vr_isNan.hxx  vr_nextUlp.hxx  vr_op.hxx  vr_rand.cxx  vr_rand.h  vr_rand_implem.h  vr_roundingOp.hxx
bash_completion/: .gitignore  Makefile  bash_completion_post_verrou_dd  bash_completion_valgrind  bash_completion_verrou_dd_back  bash_completion_verrou_dd_clean  bash_completion_verrou_dd_line  bash_completion_verrou_dd_stdout  bash_completion_verrou_dd_sym  bash_completion_verrou_dd_task  bash_completion_verrou_plot_stat  makefile
check_perf_tools/: .gitignore  buildConfig.sh  buildTag.sh  check_perf.py  exclude.all.ex  gen_build.py  gen_perf.py  gen_stat.py  tabular.py
ddTest/: Makefile  ddCmp.py  ddCmpFalse.py  ddRun.py
docker/: Dockerfile  check_build_loop.sh
docs/: fix-encoding  update-docs  update-vr-clo  valgrind-manpage.xml  verrou_dd-manpage.xml  verrou_dd_clean-manpage.xml  verrou_plotstat-manpage.xml  verrou_postdd-manpage.xml  vr-localization.xml  vr-manual.xml  vr-overview.xml  vr-scope.xml  vr-std.xml
interflop/: interflop.h  interflop_stdlib.h
interflop/common/: float_utils.h
interflop/fma/: interflop_fma.c  interflop_fma.h
interflop/iostream/: logger.c
interflop/sqrt/: Makefile.am  interflop_sqrt.c  interflop_sqrt.h
interflop_backends/: interflop.h  statically_integrated_backends.h
interflop_backends/backend_check_float_max/: interflop_check_float_max.cxx  interflop_check_float_max.h  test_main.cxx
interflop_backends/backend_checkcancellation/: interflop_checkcancellation.cxx  interflop_checkcancellation.h  test_main.cxx  vr_fpRepr.hxx
interflop_backends/backend_checkdenorm/: interflop_checkdenorm.cxx  interflop_checkdenorm.h  test_main.cxx
interflop_backends/backend_mcaquad/: interflop_mcaquad.c  interflop_mcaquad.h  mcalib.c  test_main.cxx
interflop_backends/interflop-backend-vprec/: interflop_vprec.c  interflop_vprec.h
interflop_backends/interflop_verrou/: COPYING  Makefile  dietzfelbingerHash.hxx  gen_interflop_verrou_flop_impl.py  interflop_verrou.cxx  interflop_verrou.h  interflop_verrou_flop_impl.hxx  interflop_verrou_rounding.h  mersenneHash.hxx  multiplyShiftHash.hxx  tableHash.hxx  test_main.cxx  vr_fma.hxx  vr_isNan.hxx  vr_nextUlp.hxx  vr_op.hxx  vr_rand.h  vr_rand_implem.h  vr_roundingOp.hxx  vr_sqrt.hxx  xxHash.hxx  xxh3.h
libVerrouTask/: libverrouTask.cxx  libverrouTask.h  trace_verrou_task.py
pyTools/: BBTools.py  DD.py  DD_exec_stat.py  DD_stoch.py  analyse_trace  cmpCov.py  cmpTrace.py  convNumLineTool.py  dd_config.py  find_dd_fail  genCovBB  gen_config.py  paraview_script.py  plotStat.py  post_config.py  post_verrou_dd  rounding_tool.py  verrou_dd  verrou_dd_back  verrou_dd_clean  verrou_dd_line  verrou_dd_stdout  verrou_dd_sym  verrou_dd_synchro  verrou_dd_task  verrou_plot_stat
pyWrapper/: verrouCBinding.c  verrouCBinding.h  verrouPyBinding.py
synchroLib/: Makefile  trace_verrou_synchro.py  verrouCBinding.c  verrouCBinding.h  verrouPyBinding.py  verrouSynchroLib.cxx  verrouSynchroLib.h
synchroLib/tstDDPython/: Makefile  Muller.py  ddRun.sh  extractOrCmp.py
tests/: .gitignore  Iomatch.script  Makefile.am  accuClreq.c  accuClreq1.stderr.exp  accuClreq1.stdout.exp  accuClreq1.vgtest  accuClreq2.stderr.exp  accuClreq2.stdout.exp  accuClreq2.vgtest  accuClreq3.vgtest  accuClreq4.stdout.exp  accuClreq4.vgtest  accuClreq5.stdout.exp  accuClreq5.vgtest  clreq.c  clreq.stderr.exp  clreq.stdout.exp  clreq.vgtest  clreq_both.stderr.exp  clreq_both.vgtest  clreq_soft.vgtest  denorm.c  denorm.cxx  denorm1.stderr.exp  denorm1.stderr.exp.aarch64  denorm1.stdout.exp  denorm1.vgtest  denorm2.stderr.exp  denorm2.stdout.exp  denorm2.vgtest  denorm3.stderr.exp  denorm3.vgtest  denorm4.post.exp  denorm4.post.exp.arm64  denorm4.stderr.exp  denorm4.stdout.exp  denorm4.vgtest  expect.script  filter_seed  (+121 more)
unitTest/: addVec.cxx  addVecDoubleAVX.cxx  addVecFloatAVX.cxx  checkRounding.cxx  flag.mk.in  fma.cxx  installpath  makefile  product.cxx  runCheck.py
unitTest/check-libM/: .gitignore  Makefile  genTab.py  hist.sh  testAster.cxx  testRegRef
unitTest/check-verrou-dd-synchro/: Makefile  cmp.py  mainTime.cxx
unitTest/check-verrou-dd-task/: .gitignore  Makefile  cmp.py  mainTime.cxx  refNonReg  run.sh
unitTest/checkRounding/: .gitignore  checkRounding.cxx  extract.sh  makefile  run.sh  runCheck.py
unitTest/checkStatRounding/: .gitignore  checkStatRounding.cxx  extract.py  makefile  run.sh
unitTest/checkUCB-vecto/: .gitignore  Makefile  README  testFloat.cxx
unitTest/checkVPREC/: .gitignore  (+8 more)
(+124 files in other folders)
